emulate touch support

--- a/index.html
+++ b/index.html
@@ -9,6 +9,30 @@
     import { render } from "https://esm.sh/solid-js@1.8.12/web";
     render(App, document.body);
   </script>
+  <script>
+    // from https://www.codicode.com/art/easy_way_to_add_touch_support_to_your_website.aspx
+    function touch2Mouse(e) {
+      var theTouch = e.changedTouches[0];
+      var mouseEv;
+
+      switch (e.type) {
+        case "touchstart": mouseEv = "mousedown"; break;
+        case "touchend": mouseEv = "mouseup"; break;
+        case "touchmove": mouseEv = "mousemove"; break;
+        default: return;
+      }
+
+      var mouseEvent = document.createEvent("MouseEvent");
+      mouseEvent.initMouseEvent(mouseEv, true, true, window, 1, theTouch.screenX, theTouch.screenY, theTouch.clientX, theTouch.clientY, false, false, false, false, 0, null);
+      theTouch.target.dispatchEvent(mouseEvent);
+
+      e.preventDefault();
+    }
+
+    document.addEventListener("touchstart", touch2Mouse, true);
+    document.addEventListener("touchmove", touch2Mouse, true);
+    document.addEventListener("touchend", touch2Mouse, true);
+  </script>
 </body>
 
 </html>
